@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:47 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 19:15:51 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/coda/
 COMMENT=	Output analysis and diagnostics for MCMC
-LICENSE=	gnu-gpl-v2
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	coda
-R_PKGVER=	0.19-1
+R_PKGVER=	0.19-3
 
 USE_LANGUAGES+=	# none
 
